C#/cbforest-sharp.Shared/Native.cs

        
        public static bool c4doc_insertRevision(C4Document *doc, string revID, string body, bool deleted, bool hasAttachments,
            bool allowConflict, C4Error *outError)
        {
            using(var revID_ = new C4String(revID))
            using(var body_ = new C4String(body)) {
                return Convert.ToBoolean(c4doc_insertRevision(doc, revID_.AsC4Slice(), body_.AsC4Slice(), 
                    Convert.ToByte(deleted), Convert.ToByte(hasAttachments), Convert.ToByte(allowConflict), outError));
            }
        }
        
        [DllImport(DLL_NAME, CallingConvention=CallingConvention.Cdecl, CharSet=CharSet.Ansi)]
        private static extern int c4doc_insertRevisionWithHistory(C4Document *doc, C4Slice revID, C4Slice body, byte deleted, 
            byte hasAttachments, C4Slice[] history, uint historyCount, C4Error *outError);
        
        public static int c4doc_insertRevisionWithHistory(C4Document *doc, string revID, string body, bool deleted, 
            bool hasAttachments, string[] history, uint historyCount, C4Error *outError)
        {
            var flattenedStringArray = new C4String[history.Length + 2];
            flattenedStringArray[0] = new C4String(revID);
            flattenedStringArray[1] = new C4String(body);
            for(int i = 0; i < historyCount; i++) {
                flattenedStringArray[i + 2] = new C4String(history[i]);
            }
            
            var retVal = c4doc_insertRevisionWithHistory(doc, flattenedStringArray[0].AsC4Slice(), flattenedStringArray[1].AsC4Slice(), 
                Convert.ToByte(deleted), Convert.ToByte(hasAttachments), 
                flattenedStringArray.Skip(2).Select<C4String, C4Slice>(x => x.AsC4Slice()).ToArray(), historyCount, outError);
            
            foreach(var s in flattenedStringArray) {
                s.Dispose();   
            }
            
            return retVal;
        }
        
        [DllImport(DLL_NAME, CallingConvention=CallingConvention.Cdecl, CharSet=CharSet.Ansi)]
        private static extern byte c4doc_setType(C4Document *doc, C4Slice docType, C4Error *outError);
        
        public static bool c4doc_setType(C4Document *doc, string docType, C4Error *outError)
        {
            using(var docType_ = new C4String(docType)) {
                return Convert.ToBoolean(c4doc_setType(doc, docType_.AsC4Slice(), outError));   
            }
        }
        
        [DllImport(DLL_NAME, CallingConvention=CallingConvention.Cdecl, CharSet=CharSet.Ansi, EntryPoint="c4doc_save")]
        private static extern byte _c4doc_save(C4Document *doc, uint maxRevTreeDepth, C4Error *outError);
        
        public static bool c4doc_save(C4Document *doc, uint maxRevTreeDepth, C4Error *outError)
        {
            return Convert.ToBoolean(_c4doc_save(doc, maxRevTreeDepth, outError));
        }
    }
}

